out
test.cpp: In function ‘void solve()’:
test.cpp:240:13: error: no match for ‘operator%’ (operand types are ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} and ‘ll’ {aka ‘long long int’})
  240 |         if(N%d!=0) continue;
      |            ~^~
      |            | |
      |            | ll {aka long long int}
      |            std::string {aka std::__cxx11::basic_string<char>}
In file included from /usr/include/c++/12/valarray:603,
                 from stdc++.h:95:
/usr/include/c++/12/bits/valarray_after.h:409:5: note: candidate: ‘template<class _Dom1, class _Dom2> std::_Expr<std::__detail::_BinClos<std::__modulus, std::_Expr, std::_Expr, _Dom1, _Dom2>, typename std::__fun<std::__modulus, typename _Dom1::value_type>::result_type> std::operator%(const _Expr<_Dom1, typename _Dom1::value_type>&, const _Expr<_Dom2, typename _Dom2::value_type>&)’
  409 |     _DEFINE_EXPR_BINARY_OPERATOR(%, struct std::__modulus)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:409:5: note:   template argument deduction/substitution failed:
test.cpp:240:14: note:   ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} is not derived from ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’
  240 |         if(N%d!=0) continue;
      |              ^
/usr/include/c++/12/bits/valarray_after.h:409:5: note: candidate: ‘template<class _Dom> std::_Expr<std::__detail::_BinClos<std::__modulus, std::_Expr, std::_Constant, _Dom, typename _Dom::value_type>, typename std::__fun<std::__modulus, typename _Dom1::value_type>::result_type> std::operator%(const _Expr<_Dom1, typename _Dom1::value_type>&, const typename _Dom::value_type&)’
  409 |     _DEFINE_EXPR_BINARY_OPERATOR(%, struct std::__modulus)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:409:5: note:   template argument deduction/substitution failed:
test.cpp:240:14: note:   ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} is not derived from ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’
  240 |         if(N%d!=0) continue;
      |              ^
/usr/include/c++/12/bits/valarray_after.h:409:5: note: candidate: ‘template<class _Dom> std::_Expr<std::__detail::_BinClos<std::__modulus, std::_Constant, std::_Expr, typename _Dom::value_type, _Dom>, typename std::__fun<std::__modulus, typename _Dom1::value_type>::result_type> std::operator%(const typename _Dom::value_type&, const _Expr<_Dom1, typename _Dom1::value_type>&)’
  409 |     _DEFINE_EXPR_BINARY_OPERATOR(%, struct std::__modulus)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:409:5: note:   template argument deduction/substitution failed:
test.cpp:240:14: note:   mismatched types ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’ and ‘ll’ {aka ‘long long int’}
  240 |         if(N%d!=0) continue;
      |              ^
/usr/include/c++/12/bits/valarray_after.h:409:5: note: candidate: ‘template<class _Dom> std::_Expr<std::__detail::_BinClos<std::__modulus, std::_Expr, std::_ValArray, _Dom, typename _Dom::value_type>, typename std::__fun<std::__modulus, typename _Dom1::value_type>::result_type> std::operator%(const _Expr<_Dom1, typename _Dom1::value_type>&, const valarray<typename _Dom::value_type>&)’
  409 |     _DEFINE_EXPR_BINARY_OPERATOR(%, struct std::__modulus)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:409:5: note:   template argument deduction/substitution failed:
test.cpp:240:14: note:   ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} is not derived from ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’
  240 |         if(N%d!=0) continue;
      |              ^
/usr/include/c++/12/bits/valarray_after.h:409:5: note: candidate: ‘template<class _Dom> std::_Expr<std::__detail::_BinClos<std::__modulus, std::_ValArray, std::_Expr, typename _Dom::value_type, _Dom>, typename std::__fun<std::__modulus, typename _Dom1::value_type>::result_type> std::operator%(const valarray<typename _Dom::value_type>&, const _Expr<_Dom1, typename _Dom1::value_type>&)’
  409 |     _DEFINE_EXPR_BINARY_OPERATOR(%, struct std::__modulus)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:409:5: note:   template argument deduction/substitution failed:
test.cpp:240:14: note:   mismatched types ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’ and ‘ll’ {aka ‘long long int’}
  240 |         if(N%d!=0) continue;
      |              ^
/usr/include/c++/12/valarray:1190:1: note: candidate: ‘template<class _Tp> std::_Expr<std::__detail::_BinClos<std::__modulus, std::_ValArray, std::_ValArray, _Tp, _Tp>, typename std::__fun<std::__modulus, _Tp>::result_type> std::operator%(const valarray<_Tp>&, const valarray<_Tp>&)’
 1190 | _DEFINE_BINARY_OPERATOR(%, __modulus)
      | ^~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/valarray:1190:1: note:   template argument deduction/substitution failed:
test.cpp:240:14: note:   ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} is not derived from ‘const std::valarray<_Tp>’
  240 |         if(N%d!=0) continue;
      |              ^
/usr/include/c++/12/valarray:1190:1: note: candidate: ‘template<class _Tp> std::_Expr<std::__detail::_BinClos<std::__modulus, std::_ValArray, std::_Constant, _Tp, _Tp>, typename std::__fun<std::__modulus, _Tp>::result_type> std::operator%(const valarray<_Tp>&, const typename valarray<_Tp>::value_type&)’
 1190 | _DEFINE_BINARY_OPERATOR(%, __modulus)
      | ^~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/valarray:1190:1: note:   template argument deduction/substitution failed:
test.cpp:240:14: note:   ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} is not derived from ‘const std::valarray<_Tp>’
  240 |         if(N%d!=0) continue;
      |              ^
/usr/include/c++/12/valarray:1190:1: note: candidate: ‘template<class _Tp> std::_Expr<std::__detail::_BinClos<std::__modulus, std::_Constant, std::_ValArray, _Tp, _Tp>, typename std::__fun<std::__modulus, _Tp>::result_type> std::operator%(const typename valarray<_Tp>::value_type&, const valarray<_Tp>&)’
 1190 | _DEFINE_BINARY_OPERATOR(%, __modulus)
      | ^~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/valarray:1190:1: note:   template argument deduction/substitution failed:
test.cpp:240:14: note:   mismatched types ‘const std::valarray<_Tp>’ and ‘ll’ {aka ‘long long int’}
  240 |         if(N%d!=0) continue;
      |              ^
